crates/ruff_python_parser/tests/snapshots/valid_syntax@from_import_stmt_terminator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/from_import_stmt_terminator.py
snapshot_kind: text
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..97,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 0..20,
                    module: Some(
                        Identifier {
                            id: Name("a"),
                            range: 5..6,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 15..16,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("b"),
                                range: 15..16,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            range: 18..19,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("c"),
                                range: 18..19,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 21..41,
                    module: Some(
                        Identifier {
                            id: Name("a"),
                            range: 26..27,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 36..37,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("b"),
                                range: 36..37,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            range: 39..40,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("c"),
                                range: 39..40,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 43..47,
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 43..47,
                            elts: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 43..44,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 46..47,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                        },
                    ),
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 48..66,
                    module: Some(
                        Identifier {
                            id: Name("a"),
                            range: 53..54,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 62..63,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("b"),
                                range: 62..63,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            range: 65..66,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("c"),
                                range: 65..66,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 68..72,
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 68..72,
                            elts: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 68..69,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 71..72,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                        },
                    ),
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 73..91,
                    module: Some(
                        Identifier {
                            id: Name("a"),
                            range: 78..79,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 87..88,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("b"),
                                range: 87..88,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            range: 90..91,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("c"),
                                range: 90..91,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 92..96,
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 92..96,
                            elts: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 92..93,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 95..96,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                        },
                    ),
                },
            ),
        ],
    },
)
```
